[package]
name = "iir-filter"
version = "0.1.0"
edition = "2021"
description = "Infinite impulse response filter design: Butterworth, Chebyshev Type I/II, biquad cascade"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/iir-filter"
keywords = ["iir", "filter", "butterworth", "chebyshev", "dsp"]
categories = ["science", "mathematics", "algorithms"]
authors = ["SuperInstance"]
readme = "README.md"
